--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,7 @@ ansible_connection = ssh
 ansible_ssh_user = root
 ansible_ssh_pass = HP1nvent
 ansible_become=yes
+
+[ssh_connection]
+ssh_args = -o ControlMaster=auto -o ControlPersist=900s -o GSSAPIAuthentication=no
+
