--- a/roles/myfirstplaybook/tasks/playbook02.yml
+++ b/roles/myfirstplaybook/tasks/playbook02.yml
@@ -2,9 +2,17 @@
 
 - hosts: all
   gather_facts: true
+#  proxy_env:
+#    http_proxy: http://172.16.1.5:8080
+#    https_proxy: http://172.16.1.5:8080
   tasks:
     - debug:
         msg: "connecting to {{ansible_nodename }} which is running {{ ansible_distribution }} {{ ansible_distribution_version }}"
+    - lineinfile:
+        path: /tmp/testfile
+        line: '192.168.1.99 foo.lab.net foo'
     - yum:
         name: "*"
         state: "latest"
+        environment:
+#   http_proxy: http://172.16.1.5:8080
