--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ callback_whitelist = profile_tasks
 host_key_checking = False
 ansible_connection = ssh
 ansible_ssh_user = root
-ansible_ssh_pass = HP1nvent
+ansible_ssh_private_key_file= ~/.ssh/id_rsa
 ansible_become=yes
 
 [ssh_connection]
